# Hapi

./: .cproject  .gitignore  .project  CMakeLists.txt
cmake_modules/: FindGlog.cmake
doc/: .gitignore  Makefile  diss-app-flow-scheduling.tex  diss-app-impl.tex  diss-app-libraries.tex  diss-app-test.tex  diss-compiler-tests.tex  diss-conc.tex  diss-csheuristics.tex  diss-eval.tex  diss-impl.tex  diss-intro.tex  diss-prep.tex  diss-tests.tex  diss.bib  diss.tex  progressbody.tex  progressreport.tex  propbody.tex  proposal.tex
doc/data/: af_goto_8.csv  af_goto_sr.csv  af_netgen_8.csv  af_netgen_deg.csv  af_netgen_lo_8.csv  af_netgen_lo_sr.csv  af_netgen_sr.csv  af_quincy_medium.csv  af_road_flow.csv  af_road_flow_all.csv  af_road_paths.csv  aio_small_trace_truncated.csv.synthetic  f_app_sec_goto_8.csv  f_app_sec_netgen_deg.csv  f_app_sec_netgen_lo_sr.csv  f_app_sec_netgen_sr.csv  f_app_sec_road_flow.csv  f_compilers_relax.csv  (+19 more)
lib/: cycle_cancelling.h  edmonds_karp.cpp  flow_network.cpp  graph.h  residual_network_util.cpp  residual_network_util.h  task_assignment.h
scripts/: plot_flow_graph.sh
src/: Arc.cpp  Arc.h  BellmanFord.cpp  BellmanFord.h  CMakeLists.txt  CostScaling.cpp  CostScaling.h  CycleCancelling.cpp  CycleCancelling.h  DIMACS.cpp  DIMACS.h  DIMACSEcho.cpp  EdmondsKarp.cpp  EdmondsKarp.h  FindMinCost.cpp  FlowNetwork.cpp  FlowNetwork.h  Graph.h  Makefile  ResidualNetwork.cpp  ResidualNetwork.h  ResidualNetworkUtil.cpp  ResidualNetworkUtil.h  RunCostScaling.cpp  RunCycleCancelling  RunCycleCancelling.cpp  TaskAssignment.h  arc.cpp  bellman_ford.h  cost_scaling.cpp  cycle_cancelling.cpp  dimacs.h  dimacs_echo.cpp  edmonds_karp.h  find_min_cost.cpp  flow_network.h  residual_network.cpp  residual_network.h  task_assignment.cpp  task_assignment.h
src/RelaxIV/: CMakeLists.txt  MCFClass.h  OPTUtils.h  RelaxIV.cc  RelaxIV.h  RelaxIV_incremental.cc  RelaxIV_incremental.h  bertsekas_network.cpp  bertsekas_network.h  compare_internal_state.cc  config.txt  debug_init_state.cc  dimacs.cc  dimacs.h  incremental.cc  main.cc  snapshots.cc  test_dynamic_memory.cc
src/benchmark/: benchmark.py  config.py
src/cmake_modules/: FindGlog.cmake  FindLEMON.cmake  gtest.cmake
src/cs2/: CMakeLists.txt  cs2  cs2.c
src/graphs/: CMakeLists.txt  generate.inc
src/graphs/clusters/natural/google_trace/: tiny_trace.imin
src/graphs/clusters/synthetic/firmament/incremental/: add_node_arcs.in  graph_4m_2crs_10j.in  graph_4m_2crs_10j_add_arc_equiv_core.in  graph_4m_2crs_10j_add_arc_pref_core.in  graph_4m_2crs_10j_add_core.in  graph_4m_2crs_10j_add_task.in  graph_4m_2crs_10j_add_task_nopremt.in  graph_4m_2crs_10j_chg_pref_core.in  graph_4m_2crs_10j_chg_task_sched.in  graph_4m_2crs_10j_rem_arc_pref_core.in  graph_4m_2crs_10j_rem_core_with_task.in  graph_4m_2crs_10j_rem_machine.in  graph_4m_2crs_10j_rem_sched_task.in  graph_4m_2crs_6j.in  graph_4m_2crs_6j_add_arc_equiv_core.in  graph_4m_2crs_6j_add_arc_pref_core.in  graph_4m_2crs_6j_add_core.in  graph_4m_2crs_6j_add_task.in  graph_4m_2crs_6j_add_task_noprempt.in  graph_4m_2crs_6j_chg_pref_core.in  graph_4m_2crs_6j_chg_task_sched.in  graph_4m_2crs_6j_rem_arc_pref_core.in  graph_4m_2crs_6j_rem_core_with_task.in  graph_4m_2crs_6j_rem_core_without_task.in  graph_4m_2crs_6j_rem_machine.in  graph_4m_2crs_6j_rem_sched_task.in
src/graphs/general/: CMakeLists.txt
src/graphs/general/natural/road/: CMakeLists.txt  fetch.sh  road_flow_01_DC_a.min
src/graphs/general/natural/vision/: CMakeLists.txt
src/graphs/general/synthetic/: generate_inc.sh
src/graphs/general/synthetic/goto/: params_approx.sh
src/graphs/general/synthetic/goto/params/: approx.sh  goto_sr.sh
src/graphs/general/synthetic/netgen/: CMakeLists.txt  generate.sh  params_approx.sh
src/graphs/general/synthetic/netgen/generator/: COPYRIGHT  main.h  netgen.c  netgen.h
src/graphs/general/synthetic/netgen/params/: approx.sh  netgen_lo_sr.sh  netgen_sr.sh
src/graphs/goto/: CMakeLists.txt  COPYRIGHT  generate.sh
src/graphs/goto/params/: goto_8.sh
src/graphs/netgen/: generate.sh
src/graphs/netgen/generator/: CMakeLists.txt  random.c
src/graphs/netgen/params/: netgen_deg.sh  netgen_lo_8.sh
src/graphs/vision/: fetch.sh
src/lib/: CMakeLists.txt  arc.cpp  arc.h  augmenting_path.cpp  augmenting_path.h  bellman_ford.cpp  bellman_ford.h  cost_scaling.cpp  cost_scaling.h  cycle_cancelling.cpp  cycle_cancelling.h  dimacs.h  dynamic_maintain_optimality.cpp  dynamic_maintain_optimality.h  edmonds_karp.cpp  edmonds_karp.h  flow_network.cpp  flow_network.h  graph.h  incremental_solver.cpp  incremental_solver.h  relax.cpp  relax.h  residual_network.cpp  residual_network.h  residual_network_util.cpp  residual_network_util.h  task_assignment.cpp  task_assignment.h
src/scripts/: approx_generator.sh  approx_generator_helper.sh  cut_snapshot.sh  dimacs_to_dot.py  extract.py  flow_graph_normalise.sh  plot_flow_graph.sh  visualisation_all.sh
src/tests/: CMakeLists.txt  benchmark.py  common.py  config.py  config_algorithms.py  config_common.py  config_incremental.py  run_tests.py  test_algorithms.py  test_dynamic_maintain_optimality.cpp  test_incremental.py  test_incremental_graph.py  test_incremental_solver.py  test_networks.cpp  test_task_assignment.cpp
src/tests/config/: algorithms.py  benchmark.py  benchmark_local_template.py  common.py  incremental.py
src/tests/graphs/: graph_4m_2crs_6j.s  task_assignments.s
src/tests/graphs/handmade/: task_assignments.in
src/tests/graphs/netgen/: generate.sh
src/tests/graphs/netgen/params/: netgen_8.sh
src/tests/py/: benchmark.py  distributed_benchmark.py  distributed_benchmark.sh  extract.py  redo.py  simulator_approx.py  visualisation.py
src/tests/py/config/: algorithms.py  benchmark.py  benchmark_local_template.py  common.py  distributed.py  incremental.py  seeds.txt  visualisation.py
src/tests/py/visualisation/: analysis.py  gen_approximate.py  gen_incremental.py  gen_optimisation.py  parse.py  plot.py  test_types.py
src/tests/visualisation/: analysis.py  config.py  gen_optimisation.py  main.py  parse.py
tests/: run_tests.py
(+96 files in other folders)
